# converter_bmp_array

./: CMakeLists.txt  Makefile  README.md  aboba.c  aboba.h  aboba_mini.c  backaboba.c  converter  image.c  main  main.c  readme.txt
array_c/: aboba.c  back_converter.c  converter.c  debil.c
converter_square/: converter  readme.txt
gif_converter/: CMakeLists.txt  Makefile  gif_converter  gif_converter.c  image.h  readme.txt
gifka_formatirovenie/: readme.txt
jpg_converter/: CMakeLists.txt  converter.c  readme.txt
square_converter/: CMakeLists.txt  converter.sh
